# grabchars

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: CHANGELOG.md  ESCAPE-HANDLING-IDEA.md  FILTER-FLAG.md  INTERACTIVE-FORMS.md  JSON-OUTPUT.md  RAW-MODE.md  README-1990  README.md  REFACTOR.md  RELEASE-NOTES.md  RUST-PORT.md  SECURITY.md  cookbook.md  grabchars.1  grabchars.md  maskInput.md  quantifiers-plan.md
forms/: README.md  spawn-decision.sh  spawn-intake.sh  spawn-select.sh
src/: input.rs  main.rs  mask.rs  output.rs  select.rs  term.rs
tests/: 01_basic.sh  02_filter.sh  03_count.sh  04_default.sh  05_timeout.sh  06_case.sh  07_output.sh  08_editing.sh  09_mask.sh  10_select.sh  11_select_lr.sh  12_raw.sh  13_escape.sh  14_json.sh  README.md  helpers.sh  menu.sh  run_tests.sh
